--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,6 @@ body {
     align-items: center;
 }
 .header {
-    opacity: 1;
     background-color: var(--color-fundo);
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.450);
     height: 5.5em;
@@ -34,6 +33,15 @@ body {
 }
 .navigation_header {
     gap: 2em;
+    z-index: 2;
+}
+
+.btn_icon_header {
+    display: none;
+    background-color: transparent;
+    border: none;
+    color: var(--color-active);
+    cursor: pointer;
 }
 
 .navigation_header img, .header img {
@@ -49,22 +57,44 @@ body {
     border: 7px solid var(--color-active);
 }
 .content {
-    z-index: -999;
+    z-index: -1;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 .content img {
+    padding-top: 2em;
     max-width: 100%;
     height: auto;
+    transition: .6s ease-in;
 }
 
 
 @media screen and (max-width:48em), (max-height:51.30em) {
  
+    .btn_icon_header {
+        display: block;
+    }
+    .navigation_header {
+    position: absolute;
+    flex-direction: column;
+    top: 0;
+    background-color: var(--color-fundo);
+    height: 60%;
+    width: 35vw;
+    padding: 1em;
+    animation-duration: 1s ease-in;
+    margin-left: -100vw;
+    }
+
+    @keyframes showSidebar {
+        from {margin-left: -100vw;}
+        top {margin-left: -10vw;}
+    }
+
     .content img {
-            max-width: 100%;
+            max-width: 90%;
             height: auto;
         }
 
