--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@
 }
 
 body {
+    overflow: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
     background: black url(../imagens/fundo-madeira.jpg) center center;
@@ -51,10 +52,12 @@ body {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.450);
     transition: 1s;
 }
-.active {
+.navigation_header img:hover  {
     background-color: var(--color-active);
     border-radius: 50%;
     border: 7px solid var(--color-active);
+    box-shadow: 4px 6px 5px rgba(0, 0, 0, 0.450);
+    transition: .3s;
 }
 .content {
     z-index: -1;
@@ -81,12 +84,21 @@ body {
     flex-direction: column;
     top: 0;
     background-color: var(--color-fundo);
-    height: 80%;
+    height: 100%;
     width: 35vw;
     padding: 1em;
     animation-duration: 1s;
     margin-left: -100vw;
     }
+
+        .navigation_header img,
+        .header img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.450);
+            transition: .1s;
+        }
 
     @keyframes showSidebar {
         from {margin-left: -100vw;}
