--- a/estilos/style.css
+++ b/estilos/style.css
@@ -73,6 +73,16 @@ body {
     transition: .6s ease-in;
 }
 
+footer {
+    position: absolute;
+    bottom: 0px;
+    color: var(--color-white);
+    background-color: var(--color-fundo);
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
+
 
 @media screen and (max-width:768px), (max-height: 850px) {
  
@@ -106,7 +116,7 @@ body {
     }
 
     .content img {
-            max-width: 90%;
+            max-width: 95%;
             height: auto;
         }
 
